<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_lesson"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/box_round_retangle"
        android:backgroundTint="#5dce72">
        <ImageView
            android:id="@+id/img_topic"
            android:layout_width="82dp"
            android:layout_height="78dp"
            android:layout_margin="5dp"
            android:background="@drawable/box_round_retangle"/>
    <TextView
        android:id="@+id/txt_lesson_topic"
        android:text="Topic"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Study"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/box_round_retangle"
            android:backgroundTint="#dff6e6"/>
        <LinearLayout
            android:id="@+id/linearLayout_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_onlineLectures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onlineLectures"
                android:textSize="18sp"
                android:background="@drawable/box_round_retangle"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:backgroundTint="#f5fff6"/>
            <TextView
                android:id="@+id/txt_studyVocabulary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vocabulary"
                android:textSize="18sp"
                android:background="@drawable/box_round_retangle"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:backgroundTint="#f5fff6"/>
            <TextView
                android:id="@+id/txt_identifyExcercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/identifyExcercise"
                android:textSize="18sp"
                android:background="@drawable/box_round_retangle"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:backgroundTint="#f5fff6"/>
            <TextView
                android:id="@+id/txt_listenExcercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listenExcercise"
                android:textSize="18sp"
                android:background="@drawable/box_round_retangle"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:backgroundTint="#f5fff6"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pronounceExcercise"
                android:textSize="18sp"
                android:background="@drawable/box_round_retangle"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:backgroundTint="#f5fff6"/>
            <TextView
                android:id="@+id/txt_sentencePatternExcercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sentencePatternExercises"
                android:textSize="18sp"
                android:background="@drawable/box_round_retangle"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:backgroundTint="#f5fff6"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txt_song_by_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/box_round_retangle"
            android:backgroundTint="#dff6e6"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/box_round_retangle"
            android:backgroundTint="#dff6e6"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</LinearLayout>